# predictx

./: .env  .gitignore  .skip.config.json  Anchor.toml  Importantes.txt  README.md  docs.yaml  download_idl.mjs  download_users.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratch_post.js  tailwind.config.ts
.ai/: 00_PROJECT_CONTEXT.md  01_ARCHITECTURE.md  02_IMPLEMENTATION_PLAN.md  03_API_GUIDE.md  04_CODING_RULES.md  05_UI_GUIDELINES.md  06_TYPES.md
contextualização/: implementation_plan.md  project_audit.md  task.md
programs/merkle_validator/: Cargo.toml  OPERATING_GUIDE.md  README.md
programs/merkle_validator/src/: lib.rs
src/: App.tsx  main.css
src/components/: Header.tsx  LanguageBanner.tsx  LanguageSelector.tsx  Layout.tsx  MobileNav.tsx  Sidebar.tsx  VerificationStepper.tsx
src/components/dashboard/: FeaturedMarkets.tsx  LiveMatch.tsx  RecentSettlements.tsx  ReplaySection.tsx  StatsRow.tsx  UpcomingMatches.tsx
src/hooks/: use-tx-line.ts
src/i18n/: config.ts  context.tsx  formatters.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  pt-PT.json  zh.json
src/lib/: market-labels.ts
src/pages/: Accessibility.tsx  Alerts.tsx  Analytics.tsx  Dashboard.tsx  History.tsx  Landing.tsx  Markets.tsx  MatchDetails.tsx  Matches.tsx  Settings.tsx  SettlementEngine.tsx
src/services/txline/: apiClient.ts  auth.ts  config.ts  explainable.ts  fixtures.ts  index.ts  odds.ts  scores.ts  stream.ts  validation.ts  wallet.tsx
src/stores/: main.ts
src/types/: txline.ts
