[package]
name = "merkle_validator"
version = "0.1.0"
description = "Simple Anchor contract that validates a Merkle proof, issues a CPI to TxLINE validate_stat, and performs a token transfer after validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-program = "2.2.0"
sha2 = "0.10.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
